<resources>
    <string name="app_name">Mellow</string>
    <string name="app_logo">app_logo</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="hint_reenter_password">Re enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="i_agree_to_the_terms_and_conditions">I Agree to the Terms &amp; Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don&#39;t have an account?</string>
</resources>